--- a/hkhedr_files/style.css
+++ b/hkhedr_files/style.css
@@ -5,10 +5,11 @@ html, body {
 }
 #header {
   width: 100%;
-  height: 500px;
+  height: 415px;
   font-weight: 300;
   color: white;
   margin-bottom: 40px;
+  position: relative
 }
 .bg1 {
   background-image: url('nthu.png');
@@ -50,7 +51,7 @@ html, body {
 #headerblob {
   position: absolute;
   left: 20%;
-  top: 265px;
+  top: 42%;
   width: 80%;
 }
 #headertext {
