--- a/hkhedr_files/style.css
+++ b/hkhedr_files/style.css
@@ -84,6 +84,9 @@ html, body {
   margin-bottom: 10px;
 }
 @media (max-width: 768px) {
+  #header{
+    height: 470px
+  }
   #headerblob {
     text-align: center;
     position: absolute;
